--- a/Relisten/IGShowCell.xib
+++ b/Relisten/IGShowCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D2134" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -52,7 +52,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SBD" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FCQ-Vh-sZf">
-                        <rect key="frame" x="106" y="10" width="32" height="18"/>
+                        <rect key="frame" x="101" y="10" width="32" height="18"/>
                         <color key="backgroundColor" red="0.0070205766110000003" green="0.55978260869999996" blue="0.1685694089" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="QVL-1S-NUR"/>
@@ -81,7 +81,7 @@
                     <constraint firstItem="FCQ-Vh-sZf" firstAttribute="top" secondItem="COE-tE-53f" secondAttribute="topMargin" constant="2" id="PIA-jn-LYN"/>
                     <constraint firstItem="YdB-3u-WXv" firstAttribute="leading" secondItem="COE-tE-53f" secondAttribute="leadingMargin" id="Ukb-Wb-kaa"/>
                     <constraint firstItem="jok-RX-4oj" firstAttribute="trailing" secondItem="COE-tE-53f" secondAttribute="trailingMargin" id="WaA-ni-7IG"/>
-                    <constraint firstItem="FCQ-Vh-sZf" firstAttribute="leading" secondItem="3XR-uc-wT1" secondAttribute="trailing" constant="8" id="WbS-QQ-bZQ"/>
+                    <constraint firstItem="FCQ-Vh-sZf" firstAttribute="leading" secondItem="3XR-uc-wT1" secondAttribute="trailing" constant="3" id="WbS-QQ-bZQ"/>
                     <constraint firstItem="YdB-3u-WXv" firstAttribute="bottom" secondItem="COE-tE-53f" secondAttribute="bottomMargin" id="bIj-r8-mIP"/>
                     <constraint firstItem="3XR-uc-wT1" firstAttribute="leading" secondItem="COE-tE-53f" secondAttribute="leadingMargin" id="dxK-B1-6T4"/>
                     <constraint firstItem="jok-RX-4oj" firstAttribute="top" secondItem="COE-tE-53f" secondAttribute="topMargin" constant="-3" id="hlR-FE-XoE"/>
