--- a/Relisten/IGYearCell.xib
+++ b/Relisten/IGYearCell.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -11,11 +12,12 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="56"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="oqy-ZS-dpT" id="g2w-Wu-lGV">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="55"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES"/>
                 <subviews>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="1000" text="1966" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UkS-jK-FkW">
                         <rect key="frame" x="10" y="8" width="184" height="21"/>
+                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="rLZ-xc-XXn"/>
                         </constraints>
@@ -25,6 +27,7 @@
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="288 hours" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RNv-Bo-1w1">
                         <rect key="frame" x="233" y="33" width="79" height="14"/>
+                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="79" id="7W3-u9-4vb"/>
                             <constraint firstAttribute="height" constant="14" id="SbP-xy-AcW"/>
@@ -33,8 +36,9 @@
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="888 shows, 888 recordings" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b6t-u2-knb">
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="888 shows, 888 recordings" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b6t-u2-knb">
                         <rect key="frame" x="10" y="33" width="151" height="14"/>
+                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="14" id="yYz-ad-SZP"/>
                         </constraints>
@@ -44,6 +48,7 @@
                     </label>
                     <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ex5-2v-ftm" customClass="AXRatingView">
                         <rect key="frame" x="202" y="8" width="110" height="27"/>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="110" id="HzU-FD-DVf"/>
@@ -51,6 +56,7 @@
                         </constraints>
                     </view>
                 </subviews>
+                <animations/>
                 <constraints>
                     <constraint firstItem="b6t-u2-knb" firstAttribute="bottom" secondItem="g2w-Wu-lGV" secondAttribute="bottomMargin" id="4X5-ug-4uc"/>
                     <constraint firstItem="RNv-Bo-1w1" firstAttribute="bottom" secondItem="g2w-Wu-lGV" secondAttribute="bottomMargin" id="Jxz-n5-857"/>
@@ -63,6 +69,7 @@
                     <constraint firstItem="b6t-u2-knb" firstAttribute="leading" secondItem="g2w-Wu-lGV" secondAttribute="leadingMargin" constant="2" id="yIj-lY-AhT"/>
                 </constraints>
             </tableViewCellContentView>
+            <animations/>
             <connections>
                 <outlet property="durationLabel" destination="RNv-Bo-1w1" id="vAo-ms-V4e"/>
                 <outlet property="ratingView" destination="ex5-2v-ftm" id="QaI-f6-BmT"/>
@@ -72,9 +79,4 @@
             <point key="canvasLocation" x="252" y="600"/>
         </tableViewCell>
     </objects>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
 </document>
