Album art complete

--- a/PhishOD/Panels/4.0 Tabs/Music Tab Data Providers/PHODCollectionCollectionViewCell.xib
+++ b/PhishOD/Panels/4.0 Tabs/Music Tab Data Providers/PHODCollectionCollectionViewCell.xib
@@ -21,18 +21,22 @@
                             <constraint firstAttribute="width" constant="112" id="fQ9-4m-rUN"/>
                         </constraints>
                     </imageView>
+                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="VBv-Xb-TFt">
+                        <rect key="frame" x="46" y="46" width="20" height="20"/>
+                        <animations/>
+                    </activityIndicatorView>
                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LfT-TB-sQp">
                         <rect key="frame" x="0.0" y="0.0" width="112" height="112"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="album art" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0bq-1j-xTg">
-                                <rect key="frame" x="8" y="18" width="96" height="21"/>
+                                <rect key="frame" x="8" y="18" width="96" height="20.5"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                 <color key="textColor" red="0.99989169836044312" green="1" blue="0.99988096952438354" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="an asteroid crashed the album art burned" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IEj-8Q-eRT">
-                                <rect key="frame" x="8" y="42" width="96" height="43"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="an asteroid crashed the album art burned" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IEj-8Q-eRT">
+                                <rect key="frame" x="8" y="41.5" width="96" height="57.5"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.99989169836044312" green="1" blue="0.99988096952438354" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -53,14 +57,14 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Ls-y0-GfJ" userLabel="Title">
-                        <rect key="frame" x="5" y="112" width="107" height="22"/>
+                        <rect key="frame" x="5" y="112" width="107" height="22.5"/>
                         <animations/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Uq-Y5-7N7" userLabel="Subtitle">
-                        <rect key="frame" x="5" y="134" width="107" height="14"/>
+                        <rect key="frame" x="5" y="134.5" width="107" height="13.5"/>
                         <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -81,15 +85,18 @@
                 <constraint firstAttribute="bottom" secondItem="5Uq-Y5-7N7" secondAttribute="bottom" id="M8b-br-6xY"/>
                 <constraint firstAttribute="trailing" secondItem="LfT-TB-sQp" secondAttribute="trailing" id="MSn-AX-czY"/>
                 <constraint firstAttribute="trailing" secondItem="Nft-ZC-sLE" secondAttribute="trailing" id="OgB-7H-rFL"/>
+                <constraint firstItem="VBv-Xb-TFt" firstAttribute="centerX" secondItem="Nft-ZC-sLE" secondAttribute="centerX" id="VIL-z0-jpH"/>
                 <constraint firstItem="5Uq-Y5-7N7" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="aOt-0n-s2g"/>
                 <constraint firstAttribute="trailing" secondItem="5Uq-Y5-7N7" secondAttribute="trailing" id="fHc-Y8-Co7"/>
                 <constraint firstItem="Nft-ZC-sLE" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="iEp-G1-ioS"/>
                 <constraint firstItem="5Uq-Y5-7N7" firstAttribute="top" secondItem="5Ls-y0-GfJ" secondAttribute="bottom" id="nOs-2T-xbp"/>
                 <constraint firstItem="5Ls-y0-GfJ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="nmz-GI-pcc"/>
                 <constraint firstItem="5Ls-y0-GfJ" firstAttribute="top" secondItem="Nft-ZC-sLE" secondAttribute="bottom" id="xne-JT-1mv"/>
+                <constraint firstItem="VBv-Xb-TFt" firstAttribute="centerY" secondItem="Nft-ZC-sLE" secondAttribute="centerY" id="ytM-qV-t4Z"/>
             </constraints>
             <size key="customSize" width="96" height="148"/>
             <connections>
+                <outlet property="uiActivityIndicator" destination="VBv-Xb-TFt" id="cgh-en-Cb3"/>
                 <outlet property="uiFauxAlbumArt" destination="LfT-TB-sQp" id="1SS-U3-bcY"/>
                 <outlet property="uiFauxAlbumArtDateLabel" destination="0bq-1j-xTg" id="YRA-Rm-PHw"/>
                 <outlet property="uiFauxAlbumArtSubtext" destination="IEj-8Q-eRT" id="0oS-GH-qdu"/>
